src/Components/Navbar/Navbar.scss
@import "../../index.scss";

.nav {
  margin-bottom: 40px;

  &__inner {
    display: flex;
    flex-direction: row;
    align-items: center;

    max-width: 70%;
    margin: 0 auto;
  }

  &__links {
    margin-right: auto;
    display: flex;
    flex-direction: row;

    text-transform: capitalize;

    width: 30%;
  }

  &__link {
    position: relative;
    text-decoration: none;
    color: $color_text;
    font-weight: 400;
    font-size: 16px;
    line-height: 120%;
    padding: 20px;

    background-color: $color_white;
    border: $color_white;

    text-transform: capitalize;

    &:hover {
      font-weight: 600;
      color: $color_green;

      &::after {
        content: "";
        position: absolute;
        left: 0;
        top: 100%;
        width: 100%;
        height: 2px;
        background-color: $color_green;
      }
    }
  }

  &__logo {
    width: 70%;
    display: flex;
    justify-content: center;
  }

  &__actions {
    margin-left: auto;
    display: flex;
    flex-direction: row;
    justify-content: flex-end;

    width: 30%;
  }

  &__action {
    padding: 10px;
  }

  &__cart {
    position: relative;
  }

  &__counter {
    position: absolute;
    height: 20px;
    width: 20px;

    top: -50%;
    right: -50%;

    background-color: $color_text;
    color: $color_white;
    text-align: center;
    border-radius: 50%;

    font-weight: 700;
    font-size: 14px;
    line-height: 16px;
  }
}

